@@ -19,7 +19,7 @@ var CloudCommander, Util, DOM, CloudFunc, CodeMirror;
     };
     
     cloudcmd.Editor.dir             = 'lib/client/editor/';
-    CodeMirrorEditor.dir            = cloudcmd.Editor.dir + 'codemirror/';
+    CodeMirrorEditor.dir            = cloudcmd.Editor.dir + 'codemirror_v2/';
     
     /* private functions */
     
